# h2ox-reducer

./: Dockerfile  README.md  batch.py  cloudbuild.yaml  main.py  setup.cfg
h2ox/reducer/: __init__.py  bq_client.py  gcp_utils.py  geoutils.py  reducer.py  xr_reducer.py
